fix small alignment issue with divs on index

--- a/app/assets/stylesheets/pages/_pets.scss
+++ b/app/assets/stylesheets/pages/_pets.scss
@@ -59,9 +59,9 @@
   // padding: 16px;
 // }
 
-.card-product:first-child {
-  margin-top: 5px;
-}
+// .card-product:first-child {
+//   margin-top: 5px;
+// }
 
 .card-product-infos {
   margin-left: 20px;
